[package]
name = "artifacts-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.204", features = ["derive"] }
tracing-subscriber = "0.3.18"